hphp/hack/test/typecheck/expression_trees/invalid_call1.php.exp
ERROR: File "invalid_call1.php", line 15, characters 5-18:
Expression trees only support static method calls on `static` and named classes. (Parsing[1002])
ERROR: File "invalid_call1.php", line 15, characters 5-6:
Variable `$y` is undefined, or not always defined. (Naming[2050])
